--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,25 +1,44 @@
-# -------------------------------
-# Server Port
-# -------------------------------
 server.port=8080
-
-# -------------------------------
-# Application Identity
-# -------------------------------
 spring.application.name=api-gateway
 
 # -------------------------------
-# Eureka Client Setup
+# Config Server
 # -------------------------------
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+spring.config.import=optional:configserver:http://localhost:8888/
 
 # -------------------------------
-# Gateway Route Configuration
+# Eureka Discovery
 # -------------------------------
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# -------------------------------
+# Gateway Routes
+# -------------------------------
+
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
+spring.cloud.gateway.routes[1].id=category-service
+spring.cloud.gateway.routes[1].uri=lb://category-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
+spring.cloud.gateway.routes[2].id=customer-service
+spring.cloud.gateway.routes[2].uri=lb://customer-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/customers/**
+
+spring.cloud.gateway.routes[3].id=order-service
+spring.cloud.gateway.routes[3].uri=lb://order-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/orders/**
+
+spring.cloud.gateway.routes[4].id=order-item-service
+spring.cloud.gateway.routes[4].uri=lb://order-item-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/order-items/**
+
+spring.cloud.gateway.routes[5].id=stock-movement-service
+spring.cloud.gateway.routes[5].uri=lb://stock-movement-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/stock-movements/**
+
+spring.cloud.gateway.routes[6].id=supplier-service
+spring.cloud.gateway.routes[6].uri=lb://supplier-service
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/suppliers/**
