--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,35 +10,42 @@ spring.config.import=optional:configserver:http://localhost:8888/
 # Eureka Discovery
 # -------------------------------
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # -------------------------------
 # Gateway Routes
 # -------------------------------
 
 spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].uri=lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 spring.cloud.gateway.routes[1].id=category-service
-spring.cloud.gateway.routes[1].uri=lb://category-service
+spring.cloud.gateway.routes[1].uri=lb://CATEGORY-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
 spring.cloud.gateway.routes[2].id=customer-service
-spring.cloud.gateway.routes[2].uri=lb://customer-service
+spring.cloud.gateway.routes[2].uri=lb://CUSTOMER-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/customers/**
 
 spring.cloud.gateway.routes[3].id=order-service
-spring.cloud.gateway.routes[3].uri=lb://order-service
+spring.cloud.gateway.routes[3].uri=lb://ORDER-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/orders/**
 
 spring.cloud.gateway.routes[4].id=order-item-service
-spring.cloud.gateway.routes[4].uri=lb://order-item-service
+spring.cloud.gateway.routes[4].uri=lb://ORDER-ITEM-SERVICE
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/order-items/**
 
 spring.cloud.gateway.routes[5].id=stock-movement-service
-spring.cloud.gateway.routes[5].uri=lb://stock-movement-service
+spring.cloud.gateway.routes[5].uri=lb://STOCK-MOVEMENT-SERVICE
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/stock-movements/**
 
 spring.cloud.gateway.routes[6].id=supplier-service
-spring.cloud.gateway.routes[6].uri=lb://supplier-service
+spring.cloud.gateway.routes[6].uri=lb://SUPPLIER-SERVICE
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/suppliers/**
+
+spring.cloud.gateway.routes[7].id=auth-service
+spring.cloud.gateway.routes[7].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.routes[7].predicates[0]=Path=/auth/**
+
