--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -15,3 +15,34 @@ spring.config.import=optional:configserver:http://localhost:8888/
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#------------------------------------
+#Kafka Setup
+#------------------------------------
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=emailNotification-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#------------------------------------
+#E-mail sender Setup
+#------------------------------------
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=seshusai71@gmail.com
+spring.mail.password=ahhk xnob ksho nrbn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# application.properties
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.adjust-dates-to-context-time-zone=true
+
+
